fix overflow

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,10 @@ body {
     font-family: 'Roboto', sans-serif;
     color: #333;
     background: #f7f7f7;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow: scroll;
+    scrollbar-width: none; /* For Firefox */
+    display: none; /* For Chrome, Edge, and Safari */
 }
 
 .hero {
@@ -61,6 +64,7 @@ body {
     text-decoration: none;
     margin: 0 10px;
     position: relative;
+    right: 35px;
 }
 
 .navbar a::after {
